--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+[![Build Status](https://travis-ci.org/ikuwow/apsis_bot.svg?branch=master)](https://travis-ci.org/ikuwow/apsis_bot)
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
@@ -25,4 +27,4 @@ Things you may want to cover:
 
 
 Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+`rake doc:app`.
